--- a/public/style.css
+++ b/public/style.css
@@ -153,7 +153,7 @@ h1 {
 	padding: 16px;
 	border-radius: 4px 0 0 4px;
 	border: none;
-	background-color: #0099ff;
+	background-color: #d7dfe4;
 	box-shadow: 0px 0px 8px rgba(241, 9, 9, 0.1);
 }
 
@@ -173,7 +173,7 @@ h1 {
 }
 
 .button:hover {
-	background-color: #00ff55;
+	background-color: #d48c8c;
 }
 
 .info {
